--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+
 </head>
 
 <body>
@@ -22,7 +23,7 @@
                 <button class="nav-btn active" onclick="showPage('home', event)"><i class="fas fa-home"></i></button>
                 <button class="nav-btn" onclick="showPage('planner', event)"><i class="fas fa-calendar"></i></button>
                 <button class="nav-btn" onclick="showPage('prayers',event)"><i class="fas fa-pray"></i></button>
-                <button class="nav-btn"><i class="fas fa-trophy"></i></button>
+                <button class="nav-btn" onclick="showPage('leaderboard')"><i class="fas fa-trophy"></i></button>
                 <div class="xp-status"><span>⭐</span><span id="xp-count">0</span></div>
             </nav>
         </aside>
@@ -34,6 +35,8 @@
                 </div>
                 <div class="welcome-header">
                     <h1 id="greeting">أهلاً بك يا بطل! ⚡</h1>
+                    <div id="user-rank"
+                        style="color: #6366f1; font-weight: bold; font-size: 1.1rem; margin-bottom: 15px;"></div>
                     <p class="subtitle">جاهز لإنجاز مهامك اليوم؟</p>
                 </div>
 
@@ -125,14 +128,42 @@
                         <th>الاذان</th>
                         <th>الوقت</th>
                     </thead>
-                    <div class="elSalah-quotes">
-                        <p>
-                            اول خطوات النجاح هي الصلاة
-                        </p>
+                </div>
+                <div class="elSalah-quotes">
+                    <p dir="rtl">
+                        <q>أرِحنا بها يا بلال ❤️</q>
+                    </p>
+                </div>
+                <div class="remembrance-section" dir="rtl">
+                    <div class="remembrance-tabs">
+                        <button class="tab-btn " onclick="showRemembrance('success', event)">أدعية
+                            التوفيق</button>
+                        <button class="tab-btn" onclick="showRemembrance('morning', event)">أذكار الصباح</button>
+                        <button class="tab-btn" onclick="showRemembrance('evening', event)">أذكار المساء</button>
+                    </div>
+
+                    <div id="remembrance-container" class="cards-grid">
+                        <p class="dua-text">"اللهم لا سهل إلا ما جعلته سهلاً، وأنت تجعل الحزن إذا شئت سهلاً"</p>
                     </div>
                 </div>
             </section>
 
+            <section id="leaderboard" class="page-section" style="display:none">
+                <div class="leaderboard-container">
+                    <h2>LeaderBoard</h2>
+                    <p>Coming Soon...</p>
+                </div>
+            </section>
+
+        </div>
+    </div>
+
+    <div id="prayer-overlay">
+        <div class="overlay-content">
+            <h1>حيّ على الصلاة 🕌</h1>
+            <p>حان الآن موعد الأذان.. "إن الصلاة كانت على المؤمنين كتاباً موقوتاً"<br>برجاء الذهاب للوضوء والصلاة، سنعود
+                للعمل بعد:</p>
+            <div id="return-timer">15:00</div>
         </div>
     </div>
 
