--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav class="nav-menu">
                 <button class="nav-btn active" onclick="showPage('home', event)"><i class="fas fa-home"></i></button>
                 <button class="nav-btn" onclick="showPage('planner', event)"><i class="fas fa-calendar"></i></button>
-                <button class="nav-btn" onclick="showPage('prayers',event)"><i class="fas fa-ئئ"></i></button>
+                <button class="nav-btn" onclick="showPage('prayers',event)"><i class="fas fa-mosque"></i></button>
                 <button class="nav-btn" onclick="showPage('leaderboard')"><i class="fas fa-trophy"></i></button>
                 <div class="xp-status"><span>⭐</span><span id="xp-count">0</span></div>
             </nav>
